--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=councilsGameBack
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/councils_db
+spring.datasource.username=root
+spring.datasource.password=p4ssw0rd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+
+# Configuración de Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
