--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.sql.init.mode=always
 
 # Configuración de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+logging.level.org.springframework.security=DEBUG
